--- a/pcgrr/vignettes/input.Rmd
+++ b/pcgrr/vignettes/input.Rmd
@@ -5,17 +5,19 @@ output: rmarkdown::html_document
 
 ## Input files
 
-The PCGR workflow accepts two main input files:
+The PCGR workflow accepts three main input files:
 
   * An unannotated, single-sample [VCF file](https://github.com/samtools/hts-specs#variant-calling-data-files) (>= v4.2) with called somatic variants (SNVs/InDels)
-  * A copy number segment file
+  * An allele-specific copy number segment file
+  * A file with transcript/gene expression levels
 
-The input VCF is a required input file, while the somatic copy number file is optional. The following arguments to the `pcgr` command are used for input files:
+The input VCF is a required input file, while the somatic copy number file and gene expression file are optional. The following arguments to the `pcgr` command are used for input files:
 
 * `--input_vcf` (required argument to `pcgr`)
 * `--input_cna`
+* `--input_rna_expression`
 
-In addition to these two main input files, the user can also opt to provide a [panel-of-normals VCF](#panel-of-normals-pon-vcf) file, as well as a [CPSR report (JSON)](#cpsr-report), as input.
+In addition to these three main input files, the user can also opt to provide a [panel-of-normals VCF](#panel-of-normals-pon-vcf) file, as well as a [CPSR report (JSON)](#cpsr-report), as input.
 
 ### VCF
 
@@ -49,7 +51,7 @@ When you run PCGR, make sure to feed the name of the INFO tags to the tool, i.e.
 pcgr --tumor_dp_tag TDP --tumor_af_tag TVAF
 ```
 
-As an effort to support the users with this procedure, we are currently trying to establish a _VCF pre-processing script_, that accepts any VCF (from any caller), and that will ensure that the file adheres to the formatting requirements of PCGR. See also [this issue](https://github.com/sigven/pcgr/issues/136).
+As an effort to support the users with this procedure, we are hoping to establish a _VCF pre-processing script_, that accepts any VCF (from any caller), and that will ensure that the file adheres to the formatting requirements of PCGR. See also [this issue](https://github.com/sigven/pcgr/issues/136).
 
 #### Other notes regarding input VCF
 
@@ -95,6 +97,17 @@ Importantly, you can configure predefined log(2) thresholds for segments that ar
 * `--logr_gain`: minimum log(2) value for a segment to be considered an amplification, _default 0.8_
 * `--logr_homdel`: maximum log(2) value for a segment to be considered a homozygous deletion, _default -0.8_
 
-### CPSR report
+### Gene expression
+
+The user can submit a file with bulk gene/transcript expression data to PCGR, indicating the relative expression levels of genes in the query sample. These data will be integrated with the variant calls in the output report, and also subject to an RNA expression similarity analysis with other tumor samples.
+
+The tab-separated values file with gene expression estimates __MUST__ contain the following two columns:
+
+* `TargetID`
+* `TPM`
+
+The `TPM` column indicates the expression level of a given target, and  must be provided as _Transcripts per million_ (not log-transformed), a relatively common output measure from bluk RNA-seq pipelines. The `TargetID` should list transcript or gene identifiers, preferably at the transcript-level. Permitted identifier types including Ensembl/RefSeq identifiers for transcript-level expression estimates, and gene symbols and Ensembl gene identifiers for gene-level expression estimates.
+
+### Germline calls
 
 One may feed the compressed JSON file that is output from a cancer predisposition analysis with CPSR (https://github.com/sigven/cpsr) into PCGR through the `--cpsr_report` option. This will result in a dedicated germline section of the PCGR report.
